--- a/scripts/md/basic-regs.rmd
+++ b/scripts/md/basic-regs.rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(message = FALSE)
 
 #options(width = 300)
 
-# packages 
+# packages
 library(tidyverse)
 library(readstata13)
 library(sjPlot)
@@ -22,7 +22,7 @@ library(summarytools)
 library(miceadds)
 library(estimatr)
 
-# object with outcome variables 
+# object with outcome variables
 yvars <- c("student_knowledge",
            "ecd_student_knowledge",
            "inputs",
@@ -37,12 +37,29 @@ yvars <- c("student_knowledge",
            "national_learning_goals",
            "mandates_accountability",
            "quality_bureaucracy",
-           "impartial_decision_making")
+           "impartial_decision_making"
+           )
 
-#load data 
+
+condl <- c(
+          "pct_urban",
+          "med_age",
+          "pct_school",
+          "pct_lit",
+          "pct_edu1",
+          "pct_edu2",
+          "pct_work",
+          "pct_schoolage",
+          "ln_schoolage" ,
+          "ln_schoolage",
+          "enrolled"
+  )
+
+
+#load data
 md <- read.dta13(file = "C:/Users/WB551206/OneDrive - WBG/Documents/Dashboard/global-edu-dashboard/baseline/DataSets/final/merge_district_tdist.dta",
                  convert.factors = TRUE) %>%
-  select(idschool, countryname, country, g1, g2, yvars)
+  select(idschool, countryname, country, g1, g2, yvars, condl)
 
 
 ```
@@ -55,7 +72,7 @@ I succeeded in increasing the total number of schools to 315. The drop in 50 obs
 - Country Fixed Effects (where each country is an indicator)
 - Standard Errors are clustered on District, specified to standard clustering in Stata
 
-## Main findings 
+## Main findings
 1. With the data we have, we see that the overall Bureaucracy Index it not a good predictor of any school outcomes, except for maybe school infrastructure. <br>
 2. Significant relationships among the secondary indicators are sparse, but what few there are are promising: <br>
   - National Learning Goals predict 2 variables related to instruction. <br>
@@ -64,116 +81,116 @@ I succeeded in increasing the total number of schools to 315. The drop in 50 obs
 ```{r models,  include=FALSE}
 # run + store all regressions regressions as objects
 
-# explanatory = bi 
-lm.bi.1 <- lm_robust(data = md, 
-   student_knowledge ~ bi + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.bi.2 <- lm_robust(data = md, 
-   ecd_student_knowledge ~ bi + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.bi.3 <- lm_robust(data = md, 
-   inputs ~ bi + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.bi.4 <- lm_robust(data = md, 
-   infrastructure ~ bi + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.bi.5 <- lm_robust(data = md, 
-   intrinsic_motivation ~ bi + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.bi.6 <- lm_robust(data = md, 
-   content_knowledge ~ bi + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.bi.8 <- lm_robust(data = md, 
-   operational_manage ~ bi + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.bi.9 <- lm_robust(data = md, 
-   instr_leader ~ bi + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.bi.10 <- lm_robust(data = md, 
-   principal_knowl_score ~ bi + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.bi.11 <- lm_robust(data = md, 
-   principal_manage ~ bi + as.factor(countryname), clusters = g2, se_type = "stata")
+# explanatory = bi
+lm.bi.1 <- lm_robust(data = md,
+   student_knowledge ~ bi + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.bi.2 <- lm_robust(data = md,
+   ecd_student_knowledge ~ bi + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.bi.3 <- lm_robust(data = md,
+   inputs ~ bi + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.bi.4 <- lm_robust(data = md,
+   infrastructure ~ bi + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.bi.5 <- lm_robust(data = md,
+   intrinsic_motivation ~ bi + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.bi.6 <- lm_robust(data = md,
+   content_knowledge ~ bi + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.bi.8 <- lm_robust(data = md,
+   operational_manage ~ bi + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.bi.9 <- lm_robust(data = md,
+   instr_leader ~ bi + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.bi.10 <- lm_robust(data = md,
+   principal_knowl_score ~ bi + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.bi.11 <- lm_robust(data = md,
+   principal_manage ~ bi + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
 
-# explanatory = nlg 
-lm.nlg.1 <- lm_robust(data = md, 
-   student_knowledge ~ national_learning_goals + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.nlg.2 <- lm_robust(data = md, 
-   ecd_student_knowledge ~ national_learning_goals + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.nlg.3 <- lm_robust(data = md, 
-   inputs ~ national_learning_goals + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.nlg.4 <- lm_robust(data = md, 
-   infrastructure ~ national_learning_goals + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.nlg.5 <- lm_robust(data = md, 
-   intrinsic_motivation ~ national_learning_goals + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.nlg.6 <- lm_robust(data = md, 
-   content_knowledge ~ national_learning_goals + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.nlg.8 <- lm_robust(data = md, 
-   operational_manage ~ national_learning_goals + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.nlg.9 <- lm_robust(data = md, 
-   instr_leader ~ national_learning_goals + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.nlg.10 <- lm_robust(data = md, 
-   principal_knowl_score ~ national_learning_goals + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.nlg.11 <- lm_robust(data = md, 
-   principal_manage ~ national_learning_goals + as.factor(countryname), clusters = g2, se_type = "stata")
+# explanatory = nlg
+lm.nlg.1 <- lm_robust(data = md,
+   student_knowledge ~ national_learning_goals + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.nlg.2 <- lm_robust(data = md,
+   ecd_student_knowledge ~ national_learning_goals + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.nlg.3 <- lm_robust(data = md,
+   inputs ~ national_learning_goals + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.nlg.4 <- lm_robust(data = md,
+   infrastructure ~ national_learning_goals + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.nlg.5 <- lm_robust(data = md,
+   intrinsic_motivation ~ national_learning_goals + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.nlg.6 <- lm_robust(data = md,
+   content_knowledge ~ national_learning_goals + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.nlg.8 <- lm_robust(data = md,
+   operational_manage ~ national_learning_goals + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.nlg.9 <- lm_robust(data = md,
+   instr_leader ~ national_learning_goals + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.nlg.10 <- lm_robust(data = md,
+   principal_knowl_score ~ national_learning_goals + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.nlg.11 <- lm_robust(data = md,
+   principal_manage ~ national_learning_goals + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
 
 # explanatory = ma
-lm.ma.1 <- lm_robust(data = md, 
-   student_knowledge ~ mandates_accountability + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.ma.2 <- lm_robust(data = md, 
-   ecd_student_knowledge ~ mandates_accountability + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.ma.3 <- lm_robust(data = md, 
-   inputs ~ mandates_accountability + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.ma.4 <- lm_robust(data = md, 
-   infrastructure ~ mandates_accountability + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.ma.5 <- lm_robust(data = md, 
-   intrinsic_motivation ~ mandates_accountability + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.ma.6 <- lm_robust(data = md, 
-   content_knowledge ~ mandates_accountability + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.ma.8 <- lm_robust(data = md, 
-   operational_manage ~ mandates_accountability + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.ma.9 <- lm_robust(data = md, 
-   instr_leader ~ mandates_accountability + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.ma.10 <- lm_robust(data = md, 
-   principal_knowl_score ~ mandates_accountability + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.ma.11 <- lm_robust(data = md, 
-   principal_manage ~ mandates_accountability + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.ma.1 <- lm_robust(data = md,
+   student_knowledge ~ mandates_accountability + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.ma.2 <- lm_robust(data = md,
+   ecd_student_knowledge ~ mandates_accountability + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.ma.3 <- lm_robust(data = md,
+   inputs ~ mandates_accountability + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.ma.4 <- lm_robust(data = md,
+   infrastructure ~ mandates_accountability + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.ma.5 <- lm_robust(data = md,
+   intrinsic_motivation ~ mandates_accountability + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.ma.6 <- lm_robust(data = md,
+   content_knowledge ~ mandates_accountability + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.ma.8 <- lm_robust(data = md,
+   operational_manage ~ mandates_accountability + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.ma.9 <- lm_robust(data = md,
+   instr_leader ~ mandates_accountability + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.ma.10 <- lm_robust(data = md,
+   principal_knowl_score ~ mandates_accountability + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.ma.11 <- lm_robust(data = md,
+   principal_manage ~ mandates_accountability + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
 
 
 # explanatory = qb
-lm.qb.1 <- lm_robust(data = md, 
-   student_knowledge ~ quality_bureaucracy + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.qb.2 <- lm_robust(data = md, 
-   ecd_student_knowledge ~ quality_bureaucracy + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.qb.3 <- lm_robust(data = md, 
-   inputs ~ quality_bureaucracy + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.qb.4 <- lm_robust(data = md, 
-   infrastructure ~ quality_bureaucracy + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.qb.5 <- lm_robust(data = md, 
-   intrinsic_motivation ~ quality_bureaucracy + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.qb.6 <- lm_robust(data = md, 
-   content_knowledge ~ quality_bureaucracy + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.qb.8 <- lm_robust(data = md, 
-   operational_manage ~ quality_bureaucracy + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.qb.9 <- lm_robust(data = md, 
-   instr_leader ~ quality_bureaucracy + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.qb.10 <- lm_robust(data = md, 
-   principal_knowl_score ~ quality_bureaucracy + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.qb.11 <- lm_robust(data = md, 
-   principal_manage ~ quality_bureaucracy + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.qb.1 <- lm_robust(data = md,
+   student_knowledge ~ quality_bureaucracy + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.qb.2 <- lm_robust(data = md,
+   ecd_student_knowledge ~ quality_bureaucracy + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.qb.3 <- lm_robust(data = md,
+   inputs ~ quality_bureaucracy + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.qb.4 <- lm_robust(data = md,
+   infrastructure ~ quality_bureaucracy + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.qb.5 <- lm_robust(data = md,
+   intrinsic_motivation ~ quality_bureaucracy + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.qb.6 <- lm_robust(data = md,
+   content_knowledge ~ quality_bureaucracy + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.qb.8 <- lm_robust(data = md,
+   operational_manage ~ quality_bureaucracy + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.qb.9 <- lm_robust(data = md,
+   instr_leader ~ quality_bureaucracy + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.qb.10 <- lm_robust(data = md,
+   principal_knowl_score ~ quality_bureaucracy + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.qb.11 <- lm_robust(data = md,
+   principal_manage ~ quality_bureaucracy + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
 
 # explanatory = idm
-lm.idm.1 <- lm_robust(data = md, 
-   student_knowledge ~ impartial_decision_making + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.idm.2 <- lm_robust(data = md, 
-   ecd_student_knowledge ~ impartial_decision_making + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.idm.3 <- lm_robust(data = md, 
-   inputs ~ impartial_decision_making + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.idm.4 <- lm_robust(data = md, 
-   infrastructure ~ impartial_decision_making + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.idm.5 <- lm_robust(data = md, 
-   intrinsic_motivation ~ impartial_decision_making + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.idm.6 <- lm_robust(data = md, 
-   content_knowledge ~ impartial_decision_making + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.idm.8 <- lm_robust(data = md, 
-   operational_manage ~ impartial_decision_making + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.idm.9 <- lm_robust(data = md, 
-   instr_leader ~ impartial_decision_making + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.idm.10 <- lm_robust(data = md, 
-   principal_knowl_score ~ impartial_decision_making + as.factor(countryname), clusters = g2, se_type = "stata")
-lm.idm.11 <- lm_robust(data = md, 
-   principal_manage ~ impartial_decision_making + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.idm.1 <- lm_robust(data = md,
+   student_knowledge ~ impartial_decision_making + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.idm.2 <- lm_robust(data = md,
+   ecd_student_knowledge ~ impartial_decision_making + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.idm.3 <- lm_robust(data = md,
+   inputs ~ impartial_decision_making + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.idm.4 <- lm_robust(data = md,
+   infrastructure ~ impartial_decision_making + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.idm.5 <- lm_robust(data = md,
+   intrinsic_motivation ~ impartial_decision_making + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.idm.6 <- lm_robust(data = md,
+   content_knowledge ~ impartial_decision_making + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.idm.8 <- lm_robust(data = md,
+   operational_manage ~ impartial_decision_making + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.idm.9 <- lm_robust(data = md,
+   instr_leader ~ impartial_decision_making + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.idm.10 <- lm_robust(data = md,
+   principal_knowl_score ~ impartial_decision_making + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
+lm.idm.11 <- lm_robust(data = md,
+   principal_manage ~ impartial_decision_making + pct_urban + pct_lit + pct_work + pct_edu1 + med_age + ln_schoolage + as.factor(enrolled) + as.factor(countryname), clusters = g2, se_type = "stata")
 
 ```
 
@@ -281,11 +298,10 @@ tab_model(lm.idm.1, lm.idm.2, lm.idm.3, lm.idm.4, lm.idm.5, lm.idm.6,
 
 
 
-## Summary Statistics 
+## Summary Statistics
 
 ```{r}
 dfSummary(md,
           style = "grid", plain.ascii = FALSE, round.digits = 2,
           varnumbers = FALSE, valid.col = TRUE, graph.col = FALSE, na.col = TRUE)
 ```
-
